<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<EditText
		android:id="@+id/edittemplate_title"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	        android:hint="@string/edittemplate_title"
		android:singleLine="true"
		/>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
			<MultiAutoCompleteTextView
				android:id="@+id/edittemplate_mail"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			    android:hint="@string/edittemplate_mail"
				android:layout_weight="1"
				/>
			<ImageButton
                       android:id="@+id/edittemplate_btn_mailselect"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
			/>
	</LinearLayout>			
	<EditText
		android:id="@+id/edittemplate_subject"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	        android:hint="@string/edittemplate_subject"
		android:singleLine="true"
		/>
	<EditText
		android:id="@+id/edittemplate_message"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	        android:hint="@string/edittemplate_message"
		android:layout_weight="1"
		android:gravity="top|left"
		/>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button
			android:id="@+id/edittemplate_btn_save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/edittemplate_btn_save"
		/>
		<Button
			android:id="@+id/edittemplate_btn_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/edittemplate_btn_cancel"
		/>
	</LinearLayout>
</LinearLayout>

